==> linbeiyao/HAL_Drive/OneNET/STM32/RC522_HAL/Core/HardWare/rc522.c <==
#include "RC522.h"
#include <stdio.h>
#define RC522_USE_HW_SPI		// 硬件SPI
	#define          RC522_SCK_0()             HAL_GPIO_WritePin(GPIOA, GPIO_PIN_5, GPIO_PIN_RESET)
	#define          RC522_SCK_1()             HAL_GPIO_WritePin(GPIOA, GPIO_PIN_5, GPIO_PIN_SET)
	#define          RC522_MOSI_0()            HAL_GPIO_WritePin(GPIOA, GPIO_PIN_7, GPIO_PIN_RESET)
	#define          RC522_MOSI_1()            HAL_GPIO_WritePin(GPIOA, GPIO_PIN_7, GPIO_PIN_SET)
	#define          RC522_MISO_GET()          HAL_GPIO_ReadPin(GPIOA, GPIO_PIN_6)
#define RC522_RST_HIGH HAL_GPIO_WritePin(GPIOC, GPIO_PIN_5, GPIO_PIN_SET)
#define RC522_RST_LOW HAL_GPIO_WritePin(GPIOC, GPIO_PIN_5, GPIO_PIN_RESET)
#define RC522_ENABLE HAL_GPIO_WritePin(GPIOA, GPIO_PIN_4, GPIO_PIN_RESET)
#define RC522_DISABLE HAL_GPIO_WritePin(GPIOA, GPIO_PIN_4, GPIO_PIN_SET)
#define fac_us 72   //时钟频率，单位MHZ

char PcdReset(void)
{
	RC522_RST_HIGH;
    delay_us(10);
    RC522_RST_LOW;
    HAL_Delay(60);
    RC522_RST_HIGH;
    delay_us(500);
    WriteRawRC(CommandReg, PCD_RESETPHASE);
    HAL_Delay(2);

    WriteRawRC(ModeReg, 0x3D);		// 定义发送和接收常用模式 和Mifare卡通讯，CRC初始值0x6363
    WriteRawRC(TReloadRegL, 30);	 //16位定时器低位 
    WriteRawRC(TReloadRegH, 0);		 //16位定时器高位
    WriteRawRC(TModeReg, 0x8D);			//定义内部定时器的设置
    WriteRawRC(TPrescalerReg, 0x3E);	 //设置定时器分频系数 
    WriteRawRC(TxAutoReg, 0x40);		//调制发送信号为100%ASK 

    ClearBitMask(TestPinEnReg, 0x80);	
    WriteRawRC(TxAutoReg, 0x40);	

    return MI_OK;
}

unsigned char ReadRawRC(unsigned char Address)
{
    unsigned char ucAddr;
    unsigned char ucResult = 0;
    ucAddr = ((Address << 1) & 0x7E) | 0x80;
    HAL_Delay(1);
    RC522_ENABLE;
#ifdef RC522_USE_HW_SPI
    //HW_SPI_WriteNBytes(SPI1, &ucAddr, 1);  //向总线写多个数据
    //HW_SPI_ReadNBytes(SPI1, &ucResult,1);
	HAL_SPI_Transmit(&hspi1, &ucAddr, 1, 0xff);   	//向总线写多个数据
	HAL_SPI_Receive(&hspi1, &ucResult, 1, 0xff);	//向总线读多个数据
#else 
	SW_SPI_RC522_SendByte(ucAddr);
	ucResult = SW_SPI_RC522_ReadByte();
#endif

    RC522_DISABLE;
    return ucResult;
}

void WriteRawRC(unsigned char Address, unsigned char value)
{
    unsigned char ucAddr;
    uint8_t write_buffer[2] = {0};
    ucAddr = ((Address << 1) & 0x7E);
    write_buffer[0] = ucAddr;
    write_buffer[1] = value;
    HAL_Delay(1);
    RC522_ENABLE;
#ifdef RC522_USE_HW_SPI
    //HW_SPI_WriteNBytes(SPI1, write_buffer, 2);
	HAL_SPI_Transmit(&hspi1, write_buffer, 2, 0xff);
#else	
	SW_SPI_RC522_SendByte(write_buffer[0]);
	SW_SPI_RC522_SendByte(write_buffer[1]);
#endif
    RC522_DISABLE;
}
